[gd_scene load_steps=52 format=3 uid="uid://dkrfjasg6uqa7"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_p13am"]
[ext_resource type="Script" path="res://Scripts/card_mgr.gd" id="1_wfx7x"]
[ext_resource type="Script" path="res://Scripts/deck.gd" id="5_fuj20"]
[ext_resource type="Script" path="res://Scripts/input_mgr.gd" id="6_8f7m1"]
[ext_resource type="Texture2D" uid="uid://cgohnrs3lt1m2" path="res://Assets/cards/Eight.jpg" id="6_cmubu"]
[ext_resource type="Texture2D" uid="uid://dgycg36t0xf6q" path="res://Assets/deck image.png" id="6_xq2gd"]
[ext_resource type="Script" path="res://Scripts/deal_button.gd" id="7_c6s2a"]
[ext_resource type="Script" path="res://Scripts/place_bet_button.gd" id="7_o3u30"]
[ext_resource type="Texture2D" uid="uid://dhgbl7x6q11wv" path="res://Assets/poker felt.jpg" id="7_rcrgu"]
[ext_resource type="Script" path="res://Scripts/dealer.gd" id="8_iise8"]
[ext_resource type="Script" path="res://Scripts/card_animator.gd" id="9_7u4s2"]
[ext_resource type="Theme" uid="uid://dqkxwvdxfoy0" path="res://Themes/bet_theme.tres" id="9_h1ng8"]
[ext_resource type="Script" path="res://Scripts/bet_mgr.gd" id="10_c63tc"]
[ext_resource type="Script" path="res://Scripts/player_bankroll_mgr.gd" id="11_7clbm"]
[ext_resource type="Theme" uid="uid://dryr5dktacljm" path="res://Themes/scroll.tres" id="11_7h3gg"]
[ext_resource type="Script" path="res://Scripts/bets_results.gd" id="12_5k52v"]
[ext_resource type="Script" path="res://Scripts/error_dialog.gd" id="13_joa7p"]
[ext_resource type="Script" path="res://Scripts/bets_made_list.gd" id="15_1cxym"]
[ext_resource type="Script" path="res://Scripts/bet_gui_coord.gd" id="16_gf712"]
[ext_resource type="Script" path="res://Scripts/bets_made_coord.gd" id="19_dqpeb"]
[ext_resource type="Script" path="res://Scripts/bet_type_coord.gd" id="20_p3dhe"]
[ext_resource type="Script" path="res://Scripts/bet_result_list_coord.gd" id="20_pthhu"]
[ext_resource type="Script" path="res://Scripts/odds_calculator.gd" id="20_t1syv"]
[ext_resource type="Script" path="res://Scripts/ok_or_cancel.gd" id="21_lbjsm"]
[ext_resource type="Script" path="res://Scripts/menu_primary.gd" id="24_e3ew4"]
[ext_resource type="Script" path="res://Scripts/export_results.gd" id="25_c3has"]
[ext_resource type="Script" path="res://Scripts/menu_dispatch.gd" id="26_qpy2b"]
[ext_resource type="Script" path="res://addons/FileAccessWeb/examples/upload_file_example.gd" id="28_bb4s7"]
[ext_resource type="Theme" uid="uid://bi72x6hfw3rr8" path="res://Themes/submenus.tres" id="28_nwwnx"]
[ext_resource type="Script" path="res://Scripts/file_menu.gd" id="29_hv2qj"]
[ext_resource type="Script" path="res://Scripts/tools_menu.gd" id="29_s0tko"]
[ext_resource type="Script" path="res://Scripts/settings_menu.gd" id="30_4ari5"]
[ext_resource type="Script" path="res://Scripts/help_menu.gd" id="31_hrxrx"]
[ext_resource type="Script" path="res://Scripts/view_menu_script.gd" id="32_075uc"]
[ext_resource type="Script" path="res://Scripts/hand_history_script.gd" id="33_kx2hm"]
[ext_resource type="PackedScene" uid="uid://bs0sarwky62hd" path="res://Scenes/confetti.tscn" id="34_5wb04"]
[ext_resource type="Script" path="res://Scripts/user_name.gd" id="36_0iyob"]
[ext_resource type="Script" path="res://Scripts/persistance_mgr.gd" id="37_tt6en"]
[ext_resource type="PackedScene" uid="uid://bvod7noay1y43" path="res://Scenes/high_score_table.tscn" id="38_ni1qo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl1ky"]
bg_color = Color(0.99, 0.99, 0.99, 1)

[sub_resource type="SystemFont" id="SystemFont_b7k7u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7gt14"]

[sub_resource type="SystemFont" id="SystemFont_li3cy"]

[sub_resource type="Theme" id="Theme_uwo2p"]
default_font = SubResource("SystemFont_li3cy")
default_font_size = 30

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_twsv0"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="SystemFont" id="SystemFont_b6dyo"]

[sub_resource type="Theme" id="Theme_iy2mv"]
default_font = SubResource("SystemFont_b6dyo")

[sub_resource type="SystemFont" id="SystemFont_k2wtp"]

[sub_resource type="Theme" id="Theme_fdf2n"]
default_base_scale = 1.5
default_font = SubResource("SystemFont_k2wtp")
default_font_size = 30

[sub_resource type="Theme" id="Theme_1u4pb"]
default_font_size = 30

[sub_resource type="Theme" id="Theme_thxyf"]

[node name="Main" type="Node2D"]
script = ExtResource("1_p13am")

[node name="Dealer" type="Node2D" parent="."]
script = ExtResource("8_iise8")

[node name="CardMgr" type="Node2D" parent="."]
script = ExtResource("1_wfx7x")

[node name="InputMgr" type="Node2D" parent="."]
script = ExtResource("6_8f7m1")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(150, 300)
scale = Vector2(0.8, 0.8)
script = ExtResource("5_fuj20")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = 1
texture = ExtResource("6_xq2gd")

[node name="CardsComing1" type="Sprite2D" parent="Deck"]
z_index = 1
position = Vector2(-50, -200)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_cmubu")

[node name="CardsComing2" type="Sprite2D" parent="Deck"]
z_index = 1
position = Vector2(-10, -200)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_cmubu")

[node name="CardsComing3" type="Sprite2D" parent="Deck"]
z_index = 1
position = Vector2(30, -200)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_cmubu")

[node name="CardsComing4" type="Sprite2D" parent="Deck"]
z_index = 1
position = Vector2(70, -200)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_cmubu")

[node name="CardsComing5" type="Sprite2D" parent="Deck"]
z_index = 1
position = Vector2(110, -200)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_cmubu")

[node name="CardsComing6" type="Sprite2D" parent="Deck"]
z_index = 1
position = Vector2(140, -200)
scale = Vector2(0.25, 0.25)
texture = ExtResource("6_cmubu")

[node name="Table Layout" type="Node" parent="."]

[node name="felt" type="Sprite2D" parent="Table Layout"]
top_level = true
z_index = -4
scale = Vector2(1.8, 0.931)
texture = ExtResource("7_rcrgu")
centered = false

[node name="PlayerCardTotal" type="Node2D" parent="Table Layout"]
position = Vector2(1400, 1000)
scale = Vector2(2, 2)

[node name="PlayerText" type="RichTextLabel" parent="Table Layout/PlayerCardTotal"]
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
offset_left = -150.0
offset_top = -7.5
offset_right = -90.0
offset_bottom = 22.5
scale = Vector2(2.5, 2.5)
text = "Player"

[node name="ColorRect" type="ColorRect" parent="Table Layout/PlayerCardTotal"]
offset_right = 160.0
offset_bottom = 50.0
color = Color(0.263536, 0.490894, 0.621385, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Table Layout/PlayerCardTotal"]
modulate = Color(0.99557, 0.994984, 0.999753, 1)
offset_right = 80.0
offset_bottom = 27.0
scale = Vector2(2, 2)
text = "Pre Deal"

[node name="DealerCardTotal" type="Node2D" parent="Table Layout"]
position = Vector2(1400, 400)
scale = Vector2(2, 2)

[node name="DealerText" type="RichTextLabel" parent="Table Layout/DealerCardTotal"]
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
offset_left = -150.0
offset_top = -7.5
offset_right = -90.0
offset_bottom = 22.5
scale = Vector2(2.5, 2.5)
text = "Dealer"

[node name="ColorRect" type="ColorRect" parent="Table Layout/DealerCardTotal"]
offset_right = 160.0
offset_bottom = 50.0
color = Color(0.263536, 0.490894, 0.621385, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Table Layout/DealerCardTotal"]
modulate = Color(0.99557, 0.994984, 0.999753, 1)
offset_right = 80.0
offset_bottom = 27.0
scale = Vector2(2, 2)
text = "Pre Deal"

[node name="Deal_Button" type="Button" parent="Table Layout"]
offset_left = 451.0
offset_top = 620.0
offset_right = 544.0
offset_bottom = 660.0
scale = Vector2(4, 4)
text = "Deal"
script = ExtResource("7_c6s2a")

[node name="TestButton" type="Button" parent="Table Layout"]
visible = false
offset_left = 46.0
offset_top = 638.0
offset_right = 83.0
offset_bottom = 669.0
scale = Vector2(4, 4)
text = "Test"
metadata/_edit_use_anchors_ = true

[node name="BetsResultPanel" type="Panel" parent="Table Layout"]
offset_left = 29.0
offset_top = 974.0
offset_right = 729.0
offset_bottom = 1474.0
theme_override_styles/panel = SubResource("StyleBoxFlat_fl1ky")

[node name="BetsResultsText" type="RichTextLabel" parent="Table Layout/BetsResultPanel"]
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
layout_mode = 0
offset_left = 50.0
offset_right = 150.0
offset_bottom = 25.0
scale = Vector2(4, 4)
text = "Bets Results"

[node name="BetsResults" type="ScrollContainer" parent="Table Layout/BetsResultPanel"]
z_index = 1
layout_mode = 0
offset_top = 100.0
offset_right = 700.0
offset_bottom = 500.0
theme = ExtResource("11_7h3gg")
horizontal_scroll_mode = 2
vertical_scroll_mode = 2
script = ExtResource("12_5k52v")

[node name="BetsResultsList" type="VBoxContainer" parent="Table Layout/BetsResultPanel/BetsResults"]
z_index = 2
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Bankroll" type="Node2D" parent="Table Layout"]
position = Vector2(30, 800)

[node name="BankrollText" type="RichTextLabel" parent="Table Layout/Bankroll"]
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
offset_right = 70.0
offset_bottom = 25.0
scale = Vector2(6, 6)
text = "Chips: "

[node name="BankrollAmt" type="RichTextLabel" parent="Table Layout/Bankroll"]
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
offset_left = 380.0
offset_right = 450.0
offset_bottom = 25.0
scale = Vector2(6, 6)
text = "99"

[node name="DealSpeedButton" type="MenuButton" parent="Table Layout"]
visible = false
modulate = Color(0.11, 0.11, 0.11, 1)
offset_left = 20.0
offset_top = 480.0
offset_right = 96.0
offset_bottom = 511.0
scale = Vector2(4, 4)
theme = ExtResource("9_h1ng8")
theme_override_fonts/font = SubResource("SystemFont_b7k7u")
theme_override_font_sizes/font_size = 16
text = "Medium"

[node name="BetPanel" type="Panel" parent="Table Layout"]
self_modulate = Color(0.628973, 0.883657, 0.820323, 1)
z_index = -1
offset_left = 1800.0
offset_top = 800.0
offset_right = 2540.0
offset_bottom = 1200.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7gt14")

[node name="Bet Text" type="RichTextLabel" parent="Table Layout/BetPanel"]
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
z_index = 1
layout_mode = 0
offset_left = 6.0
offset_right = 133.0
offset_bottom = 24.0
scale = Vector2(4, 4)
text = "New Bet"

[node name="PlaceBetButton" type="Button" parent="Table Layout/BetPanel"]
z_index = 1
layout_mode = 0
offset_left = 100.0
offset_top = 240.0
offset_right = 250.0
offset_bottom = 280.0
scale = Vector2(3, 3)
text = "Place Bet	"
script = ExtResource("7_o3u30")

[node name="Bet_Type_Panel" type="Panel" parent="Table Layout/BetPanel"]
z_index = 1
layout_mode = 0
offset_left = 280.0
offset_top = 110.0
offset_right = 430.0
offset_bottom = 145.0
scale = Vector2(3, 3)
theme = SubResource("Theme_uwo2p")

[node name="BetTypeButton" type="MenuButton" parent="Table Layout/BetPanel/Bet_Type_Panel"]
z_index = 2
layout_mode = 0
offset_right = 150.0
offset_bottom = 35.0
theme = ExtResource("9_h1ng8")
theme_override_fonts/font = SubResource("SystemFont_b7k7u")
theme_override_font_sizes/font_size = 14
text = "Bet Type"

[node name="BetAmtSpinBox" type="SpinBox" parent="Table Layout/BetPanel"]
z_index = 1
layout_mode = 0
offset_left = 10.0
offset_top = 110.0
offset_right = 93.063
offset_bottom = 145.0
scale = Vector2(3, 3)
min_value = 1.0
value = 5.0

[node name="BetsMadePanel" type="Panel" parent="Table Layout"]
z_index = -1
offset_left = 1800.0
offset_top = 380.0
offset_right = 2510.0
offset_bottom = 780.0
theme_override_styles/panel = SubResource("StyleBoxFlat_twsv0")

[node name="BetsMadeText" type="RichTextLabel" parent="Table Layout/BetsMadePanel"]
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
layout_mode = 0
offset_left = 100.0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 30.0
scale = Vector2(4, 4)
text = "Bets Made"

[node name="BetsMadeList" type="ItemList" parent="Table Layout/BetsMadePanel"]
layout_mode = 0
offset_top = 100.0
offset_right = 710.0
offset_bottom = 400.0
theme = SubResource("Theme_iy2mv")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
allow_reselect = true
allow_rmb_select = true
script = ExtResource("15_1cxym")

[node name="DealSpeedText" type="RichTextLabel" parent="Table Layout"]
visible = false
modulate = Color(0.00184107, 0.00184107, 0.00184107, 1)
offset_left = 20.0
offset_top = 400.0
offset_right = 120.0
offset_bottom = 430.0
scale = Vector2(4, 4)
mouse_filter = 2
text = "Deal Speed"

[node name="CardAnimator" type="Node2D" parent="."]
script = ExtResource("9_7u4s2")

[node name="BetMgr" type="Node2D" parent="."]
position = Vector2(962, 535)
scale = Vector2(1.2, 0.6825)
script = ExtResource("10_c63tc")

[node name="BetTypeCoord" type="Node2D" parent="BetMgr"]
position = Vector2(-801.667, -783.883)
scale = Vector2(0.833333, 1.4652)
script = ExtResource("20_p3dhe")

[node name="BetGUICoord" type="Node2D" parent="BetMgr"]
position = Vector2(-5, 193.407)
script = ExtResource("16_gf712")

[node name="BetsMadeCoord" type="Node" parent="BetMgr"]
script = ExtResource("19_dqpeb")

[node name="BetResultListCoord" type="Node2D" parent="BetMgr"]
script = ExtResource("20_pthhu")

[node name="PlayerBankrollMgr" type="Node2D" parent="." groups=["Persist"]]
script = ExtResource("11_7clbm")

[node name="ErrorDialog" type="ConfirmationDialog" parent="."]
title = "Error"
position = Vector2i(1000, 700)
size = Vector2i(300, 118)
always_on_top = true
theme = SubResource("Theme_fdf2n")
dialog_autowrap = true
script = ExtResource("13_joa7p")

[node name="OkOrCancel" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "Error"
position = Vector2i(1000, 700)
size = Vector2i(600, 118)
always_on_top = true
theme = SubResource("Theme_fdf2n")
dialog_autowrap = true
script = ExtResource("21_lbjsm")

[node name="HandSummaryDialog" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "Error"
position = Vector2i(1000, 700)
size = Vector2i(600, 118)
always_on_top = true
theme = SubResource("Theme_fdf2n")
dialog_autowrap = true

[node name="OkOrCancelDealOK" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "OK to Bet"
position = Vector2i(1000, 700)
size = Vector2i(600, 118)
always_on_top = true
theme = SubResource("Theme_fdf2n")
ok_button_text = "DEAL"
dialog_text = "A bet type has been selected.  Remove Bet to proceed dealing or Cancel to go back and make the bet."
dialog_autowrap = true

[node name="OkWithNoCancel" type="AcceptDialog" parent="."]
auto_translate_mode = 1
title = "Error"
position = Vector2i(1000, 700)
size = Vector2i(600, 118)
always_on_top = true
theme = SubResource("Theme_fdf2n")
dialog_autowrap = true

[node name="OddsCalculator" type="Node" parent="."]
script = ExtResource("20_t1syv")

[node name="MenuPrimary" type="MenuButton" parent="."]
visible = false
offset_left = 214.0
offset_top = 637.0
offset_right = 270.0
offset_bottom = 668.0
scale = Vector2(2.5, 2.5)
theme = SubResource("Theme_1u4pb")
text = "Menu"
flat = false
script = ExtResource("24_e3ew4")

[node name="ExportResults" type="Node" parent="MenuPrimary"]
script = ExtResource("25_c3has")

[node name="MenuDispatch" type="Node" parent="MenuPrimary"]
script = ExtResource("26_qpy2b")

[node name="FileDialog" type="FileDialog" parent="MenuPrimary"]
position = Vector2i(1000, 600)
size = Vector2i(600, 251)
access = 2

[node name="TextEdit" type="TextEdit" parent="MenuPrimary"]
visible = false
z_index = 10
layout_mode = 0
offset_left = 250.0
offset_top = -200.0
offset_right = 650.0
offset_bottom = 300.0
theme = SubResource("Theme_thxyf")
theme_override_font_sizes/font_size = 12

[node name="MenuBar" type="MenuBar" parent="."]
offset_left = 500.0
offset_top = 5.0
offset_right = 800.0
offset_bottom = 45.0
scale = Vector2(2.5, 2.5)
prefer_global_menu = false

[node name="File" type="PopupMenu" parent="MenuBar"]
size = Vector2i(100, 35)
theme = ExtResource("28_nwwnx")
item_count = 1
item_0/text = "Quit"
script = ExtResource("29_hv2qj")

[node name="Settings" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
size = Vector2i(113, 62)
theme = ExtResource("28_nwwnx")
script = ExtResource("30_4ari5")

[node name="Tools" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
size = Vector2i(113, 62)
theme = ExtResource("28_nwwnx")
item_count = 5
item_0/text = "Add Previous"
item_1/text = "Add All Bets"
item_1/id = 1
item_2/text = "Export Results"
item_2/id = 2
item_3/text = "Export Hands"
item_3/id = 3
item_4/text = "Reset Bankroll"
item_4/id = 4
script = ExtResource("29_s0tko")

[node name="View" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
size = Vector2i(113, 62)
theme = ExtResource("28_nwwnx")
item_count = 1
item_0/text = "View Top Scores"
script = ExtResource("32_075uc")

[node name="Help" type="PopupMenu" parent="MenuBar"]
auto_translate_mode = 1
size = Vector2i(100, 20)
theme = ExtResource("28_nwwnx")
item_count = 2
item_0/text = "Version"
item_1/text = "Rules of the game"
item_1/id = 1
script = ExtResource("31_hrxrx")

[node name="AutofillButton" type="OptionButton" parent="."]
offset_left = 2337.0
offset_top = 1207.0
offset_right = 2548.0
offset_bottom = 1262.0
theme = ExtResource("9_h1ng8")
item_count = 2
popup/item_0/text = "Autofill On"
popup/item_1/text = "Autofill Off"
popup/item_1/id = 1

[node name="FileUploadWidgets" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("28_bb4s7")

[node name="UploadButton" type="Button" parent="FileUploadWidgets"]
layout_mode = 0
offset_left = 900.0
offset_top = 700.0
offset_right = 959.0
offset_bottom = 731.0
scale = Vector2(3, 3)
text = "Export"

[node name="ProgressBar" type="ProgressBar" parent="FileUploadWidgets"]
layout_mode = 0
offset_left = 900.0
offset_top = 820.0
offset_right = 941.0
offset_bottom = 847.0
scale = Vector2(5, 5)

[node name="SuccessLabel" type="Label" parent="FileUploadWidgets"]
layout_mode = 0
offset_left = 900.0
offset_top = 600.0
offset_right = 1001.0
offset_bottom = 623.0
scale = Vector2(3, 3)
text = "File Exported"

[node name="HandHistory" type="Node2D" parent="."]
script = ExtResource("33_kx2hm")

[node name="Confetti" parent="." instance=ExtResource("34_5wb04")]

[node name="UserName" type="Node" parent="." groups=["Persist"]]
script = ExtResource("36_0iyob")

[node name="Popup" type="Popup" parent="UserName"]
title = "Enter user name:"
position = Vector2i(1200, 650)
size = Vector2i(400, 300)
always_on_top = true
content_scale_size = Vector2i(3, 3)
theme = ExtResource("9_h1ng8")

[node name="Label" type="Label" parent="UserName/Popup"]
offset_right = 195.0
offset_bottom = 47.0
text = "Enter Name"

[node name="NameEntry" type="LineEdit" parent="UserName/Popup"]
top_level = true
z_index = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -27.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2

[node name="OKButton" type="Button" parent="UserName/Popup"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -55.0
offset_right = 57.0
grow_vertical = 0
text = "OK"

[node name="CancelButton" type="Button" parent="UserName/Popup"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -117.0
offset_top = -55.0
grow_horizontal = 0
grow_vertical = 0
text = "Cancel"

[node name="HighScoreTable" parent="." instance=ExtResource("38_ni1qo")]
visible = false
offset_left = 311.0
offset_top = 207.0
offset_right = 1098.0
offset_bottom = 585.0

[node name="PersistanceMgr" type="Node" parent="."]
script = ExtResource("37_tt6en")

[connection signal="pressed" from="Table Layout/TestButton" to="." method="_on_quit_button_pressed"]
[connection signal="item_activated" from="Table Layout/BetsMadePanel/BetsMadeList" to="BetMgr/BetGUICoord" method="_on_bets_made_list_item_activated"]
[connection signal="canceled" from="OkOrCancel" to="OkOrCancel" method="_on_canceled"]
[connection signal="confirmed" from="OkOrCancel" to="BetMgr/BetGUICoord" method="_on_ok_or_cancel_confirmed"]
[connection signal="confirmed" from="OkOrCancel" to="OkOrCancel" method="_on_confirmed"]
[connection signal="confirmed" from="HandSummaryDialog" to="Dealer" method="_on_hand_summary_dialog_confirmed"]
[connection signal="canceled" from="OkOrCancelDealOK" to="BetMgr/BetGUICoord" method="_on_ok_or_cancel_deal_ok_canceled"]
[connection signal="confirmed" from="OkOrCancelDealOK" to="BetMgr/BetGUICoord" method="_on_ok_or_cancel_deal_ok_confirmed"]
[connection signal="pressed" from="MenuPrimary" to="MenuPrimary/MenuDispatch" method="_on_menu_primary_pressed"]
[connection signal="confirmed" from="MenuPrimary/FileDialog" to="MenuBar/Tools" method="_on_file_dialog_confirmed"]
[connection signal="file_selected" from="MenuPrimary/FileDialog" to="MenuBar/Tools" method="_on_file_dialog_file_selected"]
[connection signal="files_selected" from="MenuPrimary/FileDialog" to="MenuBar/Tools" method="_on_file_dialog_files_selected"]
[connection signal="index_pressed" from="MenuBar/File" to="MenuBar/File" method="_on_index_pressed"]
[connection signal="index_pressed" from="MenuBar/Settings" to="MenuBar/Settings" method="_on_index_pressed"]
[connection signal="index_pressed" from="MenuBar/Tools" to="MenuBar/Tools" method="_on_index_pressed"]
[connection signal="index_pressed" from="MenuBar/View" to="MenuBar/View" method="_on_index_pressed"]
[connection signal="index_pressed" from="MenuBar/Help" to="MenuBar/Help" method="_on_index_pressed"]
[connection signal="item_selected" from="AutofillButton" to="MenuBar/Tools" method="_on_autofill_button_item_selected"]
[connection signal="text_submitted" from="UserName/Popup/NameEntry" to="UserName" method="_on_name_entry_text_submitted"]
[connection signal="pressed" from="UserName/Popup/OKButton" to="UserName" method="_on_ok_button_pressed"]
[connection signal="pressed" from="UserName/Popup/CancelButton" to="UserName" method="_on_cancel_button_pressed"]
